tests/fixtures/invalid/pow_float_float_float.py
# Cannot call pow() with Float, Float, Float
x = pow(1.0, 1.0, 1.0)
